送信中の信号を簡易プレビュー

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   </head>
   <body>
     <button id="control-button">Start</button>
+    <div>
+      <canvas id="canvas" width="1000" height="200"></canvas>
+    </div>
     <script src="jjy.js"></script>
   </body>
 </html>
