現在日時を表示

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Web JJY</title>
   </head>
   <body>
-    <button id="control-button">Start</button>
+    <button id="control-button">Start</button> <span id="time"></span>
     <div>
       <canvas id="canvas" width="1000" height="200"></canvas>
     </div>
