簡単な説明を追加

--- a/index.html
+++ b/index.html
@@ -3,10 +3,53 @@
     <title>Web JJY</title>
   </head>
   <body>
+    <h1>JJYシミュレータWeb版</h1>
+    <p>
+      Web Audioを駆使して標準電波JJYの信号を再現します。
+      以下の「Start」ボタンを押すと信号の送信が始まります。
+    </p>
+
     <button id="control-button">Start</button> <span id="time"></span>
     <div>
       <canvas id="canvas" width="1000" height="200"></canvas>
     </div>
     <script src="jjy.js"></script>
+
+    <h2>このソフトについて</h2>
+    <p>
+      電波時計の時刻合わせには、<a href="http://jjy.nict.go.jp/jjy/">標準電波JJY</a>と呼ばれる
+      時刻に関する情報を送信している電波が使われています。
+      このシミュレータは、この電波をブラウザ上で再現し、標準電波が届かない環境でも電波時計の時刻合わせを可能にします。
+    </p>
+
+    <h2>使い方</h2>
+    <p>
+      パソコンのイヤホンジャックにアンテナ(普通のイヤホンで十分です)を接続し、電波時計の近くに置きます。
+      音量を最大にし、「Start」ボタンを押すと信号が送信されます。
+      電波時計を強制受信モードにし、時刻が設定されるのを待ちましょう。
+    </p>
+    <p>
+      このページではパソコン自体の時刻を調整する機能はないので、
+      事前にntpでパソコン自体の時刻設定を行っておくといいと思います。
+    </p>
+
+    <h2>動作環境</h2>
+    <p>MacBook Air + Google Chrome 48.0.2564.116 + CITIZEN 8RZ152 で動作を確認しています。</p>
+
+    <h2>原理</h2>
+    <p>
+      標準電波は40kHzまたは60kHzの電波です。
+      電気が流れればそこには必ず電波が発生するので、イヤホンにこの周波数の信号を音声として流せば、それだけで立派なアンテナになります。
+    </p>
+    <p>
+      ただし、一般的な音声アンプは人間の可聴域である20kHz以上の周波数の再生には適していません。
+      そこで、歪んだ波形に含まれる高調波を利用します。
+      ボリュームを大きくして音が割れた状態になると、音声信号は矩形波に近いかたちになります。
+      13.333kHzの矩形波にはその3倍の39.999kHzの周波数成分が含まれるので、約40kHzの電波が出せるというわけです。
+      詳しくは<a href="http://www.starstonesoft.com/jjy_simulator.htm">フリーソフト電波時計用JJYシミュレータのページ</a>を参照してください。
+    </p>
+
+    <h2>ライセンス</h2>
+    <p>MITライセンスで提供します。<a href="https://github.com/shogo82148/web-jjy/blob/gh-pages/LICENSE.md">LICENSE.md<a>を参照してください。</p>
   </body>
 </html>
