雑なモバイル対応

--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>Web JJY</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <style>
+      canvas {
+        width: 100%;
+      }
+    </style>
   </head>
   <body>
     <h1>JJYシミュレータWeb版</h1>
@@ -50,6 +57,6 @@
     </p>
 
     <h2>ライセンス</h2>
-    <p>MITライセンスで提供します。<a href="https://github.com/shogo82148/web-jjy/blob/gh-pages/LICENSE.md">LICENSE.md<a>を参照してください。</p>
+    <p>MITライセンスで提供します。<a href="https://github.com/shogo82148/web-jjy/blob/gh-pages/LICENSE.md">LICENSE.md<a>を参照してください。</p>    
   </body>
 </html>
