夏時間設定

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <div>
       <canvas id="canvas" width="1000" height="200"></canvas>
     </div>
+    <label><input id="summer-time" type="checkbox">夏時間を有効にする</label>
     <script src="jjy.js"></script>
 
     <h2>このソフトについて</h2>
