--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </p>
     <p>
       このページではパソコン自体の時刻を調整する機能はないので、
-      事前にntpでパソコン自体の時刻設定を行っておくといいと思います。
+      事前にNTPでパソコン自体の時刻設定を行っておくといいと思います。
     </p>
 
     <h2>動作環境</h2>
