免責事項を追加

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
       事前にNTPでパソコン自体の時刻設定を行っておくといいと思います。
     </p>
 
+    <h2>免責事項</h2>
+    <p>
+      ※ 利用の結果生じた損害について、一切責任を負いません。
+    </p>
+
     <h2>動作環境</h2>
     <p>MacBook Air + Google Chrome 48.0.2564.116 + CITIZEN 8RZ152 で動作を確認しています。</p>
 
