--- a/index.html
+++ b/index.html
@@ -10,10 +10,17 @@
     </style>
   </head>
   <body>
-    <h1>JJYシミュレータWeb版</h1>
+    <h1>Web版JJYシミュレータ</h1>
     <p>
-      Web Audioを駆使して標準電波JJYの信号を再現します。
-      以下の「Start」ボタンを押すと信号の送信が始まります。
+      Webブラウザから音声信号の電流を流すことで、電波時計用の標準電波JJYをシミュレーションします。
+    </p>
+
+    <h2>使い方</h2>
+    <p>
+      スマホやタブレットのイヤホンジャックにアンテナ(普通のイヤホンで十分です)を接続し、電波時計の近くに置きます。
+      音量を最大にし、「Start」ボタンを押すと信号が送信されます。
+      電波時計を強制受信モードにし、時刻が設定されるのを十数分待ちましょう。
+      スマホの画面をオフにしないように気をつけましょう。
     </p>
 
     <button id="control-button">Start</button> <span id="time"></span>
@@ -28,22 +35,13 @@
       電波時計の時刻合わせには、<a href="http://jjy.nict.go.jp/jjy/">標準電波JJY</a>と呼ばれる
       時刻に関する情報を送信している電波が使われています。
       このシミュレータは、この電波をブラウザ上で再現し、標準電波が届かない環境でも電波時計の時刻合わせを可能にします。
-    </p>
-
-    <h2>使い方</h2>
-    <p>
-      スマホやタブレットのイヤホンジャックにアンテナ(普通のイヤホンで十分です)を接続し、電波時計の近くに置きます。
-      音量を最大にし、「Start」ボタンを押すと信号が送信されます。
-      電波時計を強制受信モードにし、時刻が設定されるのを待ちましょう。
-    </p>
-    <p>
       このページではパソコン自体の時刻を調整する機能はないので、
-      事前にNTPでパソコン自体の時刻設定を行っておくといいと思います。
+      事前にパソコン自体の時刻設定を行っておくとよいでしょう。
     </p>
 
     <h2>免責事項</h2>
     <p>
-      ※ 利用の結果生じた損害について、一切責任を負いません。
+      MITライセンスの通り、利用の結果生じた損害について、一切責任を負いません。
     </p>
 
     <h2>動作検証方法</h2>
@@ -54,15 +52,22 @@
     <h2>原理</h2>
     <p>
       標準電波は40kHzまたは60kHzの電波です。
-      電気が流れればそこには必ず電波が発生するので、イヤホンにこの周波数の信号を音声として流せば、それだけで立派なアンテナになります。
-    </p>
-    <p>
-      基のコードは高調波という高度なテクニックを使っていましたが、
-      最近のスマホやタブレットの出力は40kHzに対応していることから、そのまま40kHzを出すように変更しました。
+      電気が流れればそこには必ず電波が発生するので、イヤホンにこの周波数の信号を音声として流せば、それだけで立派な送信アンテナになります。
+      昔は20kHzまでしか音声信号を出力できず、高調波という高度なテクニックを使って、40kHzを擬似的に出力していました。
+      ただ、最近のスマホやタブレットの出力は192kHzまでに対応していることから、そのテクニックは不要となりました。
+      対応している例: <a href="https://www.amazon.co.jp/%E3%83%9A%E3%83%B3%E3%82%B4-USB-C-3-5mm%E3%82%AA%E3%83%BC%E3%83%87%E3%82%A3%E3%82%AA%E5%A4%89%E6%8F%9B%E3%82%A2%E3%83%80%E3%83%97%E3%82%BF%E3%82%B1%E3%83%BC%E3%83%96%E3%83%AB-Hi-Res-192kHz-%E6%97%A5%E6%9C%AC%E6%AD%A3%E8%A6%8F%E4%BB%A3%E7%90%86%E5%BA%97%E5%93%81/dp/B07BGXS2M2">例1</a>。
+      そこで、そのまま40kHzの信号を出すように変更しました。
+      一方でイヤホンが対応しているかどうかはわからないため、注意してください。
     </p>
 
     <h2>ライセンス</h2>
-    <p>MITライセンスで提供します。<a href="https://github.com/shogo82148/web-jjy/blob/gh-pages/LICENSE.md">LICENSE.md<a>を参照してください。</p>    
+    <p>MITライセンスで提供します。<a href="https://github.com/alfredplpl/web-jjy/blob/master/LICENSE.md">LICENSE.md<a>を参照してください。</p>    
+
+    <h2>主な修正点</h2>
+    <p>
+      shogo82148さんのコードを殆ど使っていますが、
+      周波数だけ私が書きました。
+    </p>
 
     <h2>関連リンク</h2>
     <p>
