--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
     </style>
   </head>
   <body>
-    <h1>Web版JJYシミュレータ</h1>
+    <h1>Web版標準電波基地局シミュレータ</h1>
     <p>
-      Webブラウザから音声信号の電流を流すことで、電波時計用の標準電波JJYをシミュレーションします。
+      Webブラウザとイヤホンジャックから電波時計用の標準電波を流せる信号を流し、ごく小規模ごく低出力の基地局をシミュレーションします。
+      基地局と書くと大層なものに見えますが、無線LANのアクセスポイントも基地局にあたるのでわりと身近なものになります。
     </p>
 
     <h2>使い方</h2>
     <p>
-      スマホやタブレットのイヤホンジャックにアンテナ(普通のイヤホンで十分です)を接続し、電波時計の近くに置きます。
+      スマホやタブレットのイヤホンジャックに廉価なアンテナを接続し、電波時計の近くに置きます。
       音量を最大にし、「Start」ボタンを押すと信号が送信されます。
       電波時計を強制受信モードにし、時刻が設定されるのを十数分待ちましょう。
-      スマホの画面をオフにしないように気をつけましょう。
+      スマホやタブレットの画面をオフにしないように気をつけましょう。
     </p>
 
     <button id="control-button">Start</button> <span id="time"></span>
@@ -47,26 +48,34 @@
       MITライセンスの通り、利用の結果生じた損害について、一切責任を負いません。
     </p>
 
-    <h2>動作検証方法</h2>
+    <h2>動作検証</h2>
     <p>
+      （iPad Pro + 1000円のイヤホンジャックアダプタ + 1000円のAM用アンテナで挑戦中）
+      （iPhone Xでも挑戦中）
       TBA
     </p>
 
     <h2>原理</h2>
     <p>
       標準電波は40kHzまたは60kHzの電波です。
-      電気が流れればそこには必ず電波が発生するので、イヤホンにこの周波数の信号を音声として流せば、それだけで立派な送信アンテナになります。
+      電気が流れればそこには必ず電波が発生するので、イヤホンジャックから音声代わりにこの周波数の信号を流せば、それだけでちっこい基地局になります。
       昔は20kHzまでしか音声信号を出力できず、高調波という高度なテクニックを使って、40kHzを擬似的に出力していました。
       ただ、最近のスマホやタブレットの出力は192kHzまでに対応していることから、そのテクニックは不要となりました。
       対応している例: <a href="https://www.amazon.co.jp/%E3%83%9A%E3%83%B3%E3%82%B4-USB-C-3-5mm%E3%82%AA%E3%83%BC%E3%83%87%E3%82%A3%E3%82%AA%E5%A4%89%E6%8F%9B%E3%82%A2%E3%83%80%E3%83%97%E3%82%BF%E3%82%B1%E3%83%BC%E3%83%96%E3%83%AB-Hi-Res-192kHz-%E6%97%A5%E6%9C%AC%E6%AD%A3%E8%A6%8F%E4%BB%A3%E7%90%86%E5%BA%97%E5%93%81/dp/B07BGXS2M2">例1</a>。
       そこで、そのまま40kHzの信号を出すように変更しました。
-      一方でイヤホンが対応しているかどうかはわからないため、注意してください。
     </p>
 
     <h2>主な修正点</h2>
     <p>
       shogo82148さんのコードを殆ど使っていますが、
       周波数だけ私が書きました。
+    </p>
+
+    <h2>法律上の問題に関して</h2>
+    <p>
+      このアプリに関する法律として電波法があります。
+      そうと入っても、ごく低出力であれば総務省に普通怒られることはありません。
+      ただ、気にはなるのでTBAということで。
     </p>
 
     <h2>関連リンク</h2>
