--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </style>
   </head>
   <body>
-    <h1>Web版標準電波基地局シミュレータ</h1>
+    <h1>Web版標準電波基地局シミュレータ(40kHz)</h1>
     <p>
       Webブラウザとイヤホンジャックから電波時計用の標準電波を流せる信号を流し、ごく小規模ごく低出力の基地局をシミュレーションします。
       基地局と書くと大層なものに見えますが、無線LANのアクセスポイントも基地局にあたるのでわりと身近なものになります。
