--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <h2>テスト済み動作環境</h2>
     <p>
       可能だった組み合わせは以下のとおりです。（随時更新予定）
-      <table>
+      <table border="1">
         <tr>
           <th>本体</th>
           <th>変換アダプタ</th>
