--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     </style>
   </head>
   <body>
-    <h1>Web版標準電波基地局エミュレータ</h1>
+    <h1>Web版標準電波送信所エミュレータ</h1>
     <p>
-      Webブラウザとイヤホンジャックから電波時計用の標準電波を流せる信号を流し、ごく小規模ごく低出力の基地局をモノマネします。
-      基地局と書くと大層なものに見えますが、無線LANのアクセスポイント、いわゆるWi-Fiも基地局にあたるのでわりと身近なものになります。
+      Webブラウザとイヤホンジャックから電波時計用の標準電波を流せる信号を流し、ごく小規模ごく低出力の送信所をモノマネします。
+      送信所と書くと大層なものに見えますが、送信所は無線局にあたり、これの身近なものは無線LANとわりと身近なものと同じ分類です。
     </p>
 
     <h2>使い方</h2>
@@ -61,6 +61,12 @@
         <tr>
           <th>iPad Pro (Apple)</th>
           <th>AD-C35SDWH (エレコム) </th>
+          <th>RP-CNME30-K (パナソニック) </th>
+          <th>BC402W (セイコークロック) </th>
+        </tr>
+        <tr>
+          <th>Xperia XZ1 Compact  (ソニー)</th>
+          <th>なし </th>
           <th>RP-CNME30-K (パナソニック) </th>
           <th>BC402W (セイコークロック) </th>
         </tr>
